--- a/frontmatter.tex
+++ b/frontmatter.tex
@@ -49,7 +49,8 @@ included in a publication in a peer-reviewed journal. Figures labelled `CMS' or 
 including those made by myself, include the relevant reference in the figure caption.
 The work for the analyses presented in chapters \ref{chap:hhh} and \ref{chap:mssm} was 
 carried out as part of the CMS \Htotautau working group, and in collaboration with other members of the group.
-For the results presented in chapter \ref{chap:hhh} I 
+For the results presented in chapter \ref{chap:hhh} I contributed to the data analysis of two out of three
+final states presented in the final public result, and I 
 was responsible for the statistical inference. This included
 the interpretation of the results in MSSM and two Higgs doublet model benchmark scenarios. The 
 work is included in Ref. \cite{CMS-HIG-14-034}. For the results presented in chapter \ref{chap:mssm}
