--- a/preamble.tex
+++ b/preamble.tex
@@ -57,6 +57,7 @@
 \DeclareRobustCommand{\Pgth}{\HepParticle{\tau}{h}{}\xspace}
 \DeclareRobustCommand{\Htohh}{\HepProcess{ \PHiggs \to \PHiggslight \PHiggslight}\xspace}
 \DeclareRobustCommand{\Htohhtobbtautau}{\HepProcess{ \PHiggs \to \PHiggslight \PHiggslight \to \Pbottom \Pbottom \Pgt \Pgt}\xspace}
+\DeclareRobustCommand{\ggHtohhtobbtautau}{\HepProcess{ \Pgluon \Pgluon \to \PHiggs \to \PHiggslight \PHiggslight \to \Pbottom \Pbottom \Pgt \Pgt}\xspace}
 \DeclareRobustCommand{\htotautau}{\HepProcess{ \PHiggslight \to \Pgt \Pgt}\xspace}
 \DeclareRobustCommand{\Htotautau}{\HepProcess{ \PHiggs \to \Pgt \Pgt}\xspace}
 \DeclareRobustCommand{\hhtobbtautau}{\HepProcess{ \PHiggslight \to \Pbottom \Pbottom \Pgt \Pgt}\xspace}
@@ -70,6 +71,7 @@
 \newcommand{\mutau}{$\Pgm$\Pgth}
 \newcommand{\etau}{$\Pe$\Pgth}
 \newcommand{\tautau}{$\Pgth\Pgth$\xspace}
+\newcommand{\xsbr}{$\sigma{\times}\mathcal{B}$\xspace}
 \DeclareRobustCommand{\mumu}{\HepProcess{\Pmu\Pmu} \xspace}
 \DeclareRobustCommand{\Zellell}{\HepProcess{ \PZ/\Pphotonx \to \Plepton \Plepton}\xspace}
 \DeclareRobustCommand{\Zll}{\HepProcess{ \PZ/\Pphotonx \to ll}\xspace}
@@ -78,7 +80,7 @@
 \DeclareRobustCommand{\Zmmnog}{\HepProcess{ \PZ \to \Pgm\Pgm}\xspace}
 \DeclareRobustCommand{\Zeenog}{\HepProcess{ \PZ \to \Pe\Pe}\xspace}
 \DeclareRobustCommand{\Ztautau}{\HepProcess{ \PZ/\Pphotonx \to \Pgt \Pgt}\xspace}
-\DeclareRobustCommand{\Wjets}{\PW + jets\xspace}
+\DeclareRobustCommand{\Wjets}{\PW{+}jets\xspace}
 \DeclareRobustCommand{\ttbar}{\HepProcess{\Ptop\APtop}\xspace}
 \DeclareRobustCommand{\WW}{\HepProcess{\PW\PW}\xspace}
 \DeclareRobustCommand{\WZ}{\HepProcess{\PW\PZ}\xspace}
