Sorting out some of the comments on theory chapter

--- a/MSSM/MSSM.tex
+++ b/MSSM/MSSM.tex
@@ -87,7 +87,7 @@ in figure \ref{fig:mt_muonpt}a, which shows the \pT~of muons in the
 \mutau channel, with the signal normalised to 4000 times its \xsbr 
  at \mA~$=1\,\TeV$ and \tanb~$=50$ in the $m_{\PHiggslight}^{\text{mod}+}$ scenario overlaid.
 In the \emu channel two dedicated electron-muon cross triggers
-are used. These have significantly lower online \pT~cuts 
+are used. These have significantly lower \pT~cuts 
 on the two leptons than the single lepton triggers. For the 
 \tautau channel a di-tau cross-trigger is used.
 
@@ -893,7 +893,7 @@ $\frac{N_{\text{W,MC}}^{\text{OS,low } m_{T},\text{b-tag category}}}{N_{\text{W,
 \begin{figure}[h!]
 \begin{center}
 \subfloat[No b-tag]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/htt_et_10_shapes_postfit.pdf}}
-\subfloat[B-tag]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/htt_et_13_shapes_postfit.pdf}}
+\subfloat[b-Tag]{\includegraphics[width=0.5\textwidth]{./MSSM/Figures/htt_et_13_shapes_postfit.pdf}}
 \end{center}
 \caption[High-\mT~control region in the no b-tag and b-tag
 categories of the \etau channel.]{High-\mT~control region in the (a) no b-tag and (b) b-tag categories of the \etau
@@ -1455,8 +1455,8 @@ observed at $125\,\GeV$.
 
 \begin{figure}[h!]
 \begin{center}
-\subfloat[no b-tag]{\includegraphics[width=0.5\textwidth]{MSSM/Figures/CMS-PAS-HIG-16-037_Figure_005-a.pdf}}
-\subfloat[b-tag]{\includegraphics[width=0.5\textwidth]{MSSM/Figures/CMS-PAS-HIG-16-037_Figure_005-b.pdf}}
+\subfloat[No b-tag]{\includegraphics[width=0.5\textwidth]{MSSM/Figures/CMS-PAS-HIG-16-037_Figure_005-a.pdf}}
+\subfloat[b-Tag]{\includegraphics[width=0.5\textwidth]{MSSM/Figures/CMS-PAS-HIG-16-037_Figure_005-b.pdf}}
 \end{center}
 \caption[Distributions of \mTtot~in the no b-tag and b-tag categories
 of the \mutau channel.]{Distributions of \mTtot~in the (a) no b-tag and (b) b-tag categories 
@@ -1470,8 +1470,8 @@ the reason for the doubly-peaking shape of the overlaid signal \cite{CMS-PAS-HIG
 
 \begin{figure}[h!]
 \begin{center}
-\subfloat[no b-tag]{\includegraphics[width=0.5\textwidth]{MSSM/Figures/CMS-PAS-HIG-16-037_Figure_006-a.pdf}}
-\subfloat[b-tag]{\includegraphics[width=0.5\textwidth]{MSSM/Figures/CMS-PAS-HIG-16-037_Figure_006-b.pdf}}
+\subfloat[No b-tag]{\includegraphics[width=0.5\textwidth]{MSSM/Figures/CMS-PAS-HIG-16-037_Figure_006-a.pdf}}
+\subfloat[b-Tag]{\includegraphics[width=0.5\textwidth]{MSSM/Figures/CMS-PAS-HIG-16-037_Figure_006-b.pdf}}
 \end{center}
 \caption[Distributions of \mTtot~inthe no b-tag and b-tag 
 categories of the \etau channel.]{Distributions of \mTtot~in the (a) no b-tag and (b) b-tag categories 
@@ -1485,8 +1485,8 @@ and \tanb~$=50$ in the $m_{\PHiggslight}^{mod+}$ scenario is overlaid \cite{CMS-
 
 \begin{figure}[h!]
 \begin{center}
-\subfloat[no b-tag]{\includegraphics[width=0.5\textwidth]{MSSM/Figures/CMS-PAS-HIG-16-037_Figure_008-a.pdf}}
-\subfloat[b-tag]{\includegraphics[width=0.5\textwidth]{MSSM/Figures/CMS-PAS-HIG-16-037_Figure_008-b.pdf}}
+\subfloat[No b-tag]{\includegraphics[width=0.5\textwidth]{MSSM/Figures/CMS-PAS-HIG-16-037_Figure_008-a.pdf}}
+\subfloat[b-Tag]{\includegraphics[width=0.5\textwidth]{MSSM/Figures/CMS-PAS-HIG-16-037_Figure_008-b.pdf}}
 \end{center}
 \caption[Distributions of \mTtot~in the no b-tag and b-tag categories
 of the \tautau channel.]{Distributions of \mTtot~in the (a) no b-tag and (b) b-tag categories 
@@ -1500,8 +1500,8 @@ and \tanb~$=50$ in the $m_{\PHiggslight}^{mod+}$ scenario is overlaid \cite{CMS-
 
 \begin{figure}[h!]
 \begin{center}
-\subfloat[no b-tag]{\includegraphics[width=0.5\textwidth]{MSSM/Figures/CMS-PAS-HIG-16-037_Figure_007-a.pdf}}
-\subfloat[b-tag]{\includegraphics[width=0.5\textwidth]{MSSM/Figures/CMS-PAS-HIG-16-037_Figure_007-b.pdf}}
+\subfloat[No b-tag]{\includegraphics[width=0.5\textwidth]{MSSM/Figures/CMS-PAS-HIG-16-037_Figure_007-a.pdf}}
+\subfloat[b-Tag]{\includegraphics[width=0.5\textwidth]{MSSM/Figures/CMS-PAS-HIG-16-037_Figure_007-b.pdf}}
 \end{center}
 \caption[Distributions of \mTtot~in the no b-tag and b-tag categories of 
 the \emu channel.]{Distributions of \mTtot~in the (a) no b-tag and (b) b-tag categories 
