Adding some more referecnes

--- a/references.bib
+++ b/references.bib
@@ -1,21 +1,47 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Adinda de Wit at 2017-02-20 18:37:32 +0100 
+%% Created for Adinda de Wit at 2017-02-21 12:20:34 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
 
+@article{CMSspin,
+	Collaboration = {CMS},
+	Date-Added = {2017-02-20 17:42:02 +0000},
+	Date-Modified = {2017-02-20 17:43:03 +0000},
+	Doi = {10.1140/epjc/s10052-014-3076-z},
+	Eprint = {1407.0558},
+	Journal = {Eur. Phys. J. C},
+	Keywords = {Higgs},
+	Pages = {3076},
+	Title = {Observation of the diphoton decay of the Higgs boson and measurements of its properties},
+	Volume = {74},
+	Year = {2014}}
+
+@article{ATLASspin,
+	Collaboration = {ATLAS},
+	Date-Added = {2017-02-20 17:41:06 +0000},
+	Date-Modified = {2017-02-20 17:42:00 +0000},
+	Doi = {10.1016/j.physletb.2013.08.026},
+	Eprint = {1307.1432},
+	Journal = {Phys. Lett. B},
+	Keywords = {Higgs},
+	Pages = {120},
+	Title = {Evidence for the spin-0 nature of the Higgs boson using ATLAS data},
+	Volume = {726},
+	Year = {2013}}
+
 @article{ATLAS-tautau,
 	Collaboration = {ATLAS},
 	Date-Added = {2017-02-20 17:36:25 +0000},
-	Date-Modified = {2017-02-20 17:37:29 +0000},
+	Date-Modified = {2017-02-20 17:41:02 +0000},
 	Doi = {10.1007/JHEP04(2015)117},
 	Eprint = {1501.04943},
 	Journal = {JHEP},
-	Keywords = {8TeV},
+	Keywords = {Higgs},
 	Pages = {117},
 	Title = {Evidence for the Higgs-boson Yukawa coupling to tau leptons with the ATLAS detector},
 	Volume = {04},
